Room database - Fixat random-funktion så den funkar rätt på alla ImageButton. Påbörjat funktion för att ta ut current day för en vecka.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,8 +12,18 @@
             android:supportsRtl="true"
             android:theme="@style/AppTheme">
         <activity android:name=".detailViewRecept">
+            <intent-filter>
+                <action android:name="package.detailViewRecept" />
+
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
         </activity>
         <activity android:name=".GenreRecept_Activity">
+            <intent-filter>
+                <action android:name="package.GenreRecept_Activity" />
+
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
         </activity>
         <activity
                 android:name=".MainActivity"
